--- a/straycat-rs.yaml
+++ b/straycat-rs.yaml
@@ -89,15 +89,6 @@ expressions:
     default_value: 50
     is_flag: true
     flag: B
-  pcmp:
-    name: peak compressor
-    abbr: pcmp
-    type: Numerical
-    min: 0
-    max: 99
-    default_value: 86
-    is_flag: true
-    flag: P
   pnrm:
     name: peak normalization
     abbr: pnrm
@@ -160,3 +151,11 @@ expressions:
     - G80
     - G90
     - G100
+  ncmp:
+    name: no compression
+    abbr: ncmp
+    type: Options
+    is_flag: true
+    options:
+    - ''
+    - P0p-1
