--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,10 +97,10 @@ jobs:
             # if windows, executable is straycat-rs.exe, otherwise straycat-rs
             if [[ $arch == "win"* ]]; then
               file="${arch}/straycat-rs.exe"
-              cp file "straycat-rs-${arch}.exe"
+              cp $file "straycat-rs-${arch}.exe"
             else
               file="${arch}/straycat-rs"
-              cp file "straycat-rs-${arch}"
+              cp $file "straycat-rs-${arch}"
             fi
             echo "${arch}_SHA1=$(shasum -a 1 "$file" | awk '{ print $1 }')" >> "$GITHUB_OUTPUT"
             echo "${arch}_SHA256=$(shasum -a 256 "$file" | awk '{ print $1 }')" >> "$GITHUB_OUTPUT"
